<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Signup">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:id="@+id/animation2"
        android:layout_height="250dp"

        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/signup" />
    <TextView
        android:id="@+id/Signuplogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/Firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:ems="15"
        android:drawableStart="@drawable/user"
        android:drawablePadding="15dp"
        android:hint="@string/first_name"
        android:inputType="text"
        android:minHeight="48dp"
        />

    <EditText
        android:id="@+id/Lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:drawableStart="@drawable/user"
        android:drawablePadding="15dp"
        android:ems="15"
        android:hint="@string/last_name"
        android:inputType="text"
        android:minHeight="48dp"
        />

    <EditText
        android:id="@+id/registeremail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:drawableStart="@drawable/email1"
        android:drawablePadding="15dp"
        android:ems="15"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/mobilenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableStart="@drawable/mobile"
        android:drawablePadding="15dp"
        android:ems="15"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:hint="@string/enter_mobile_number"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawablePadding="15dp"
        android:ems="15"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        android:inputType="textWebPassword"
        android:layout_gravity="center"
        android:minHeight="48dp"
        android:drawableStart="@drawable/password"
        />

    <EditText
        android:id="@+id/cnfpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableStart="@drawable/password"
        android:drawablePadding="15dp"
        android:ems="15"
        android:hint="@string/confirm_password"
        android:layout_gravity="center"
        android:inputType="textWebPassword"
        android:layout_marginTop="5dp"
        android:minHeight="48dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:id="@+id/textview5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_singing_up_you_re_agree_to_our"
            android:layout_marginStart="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/terms_condition"
            android:textColor="#2196F3"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/and"
            android:textSize="12sp"
            />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_and_policy"
            android:textColor="#2196F3"
            android:layout_marginStart="3dp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Signupbutton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/signup"
        android:textAllCaps="true"
        android:textColor="#212121" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        tools:ignore="VisualLintBounds">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:text="@string/joined_us_before"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#2196F3"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="3dp"
            android:text="@string/login"

            />
    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:id="@+id/progressbar"/>


</LinearLayout>